<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:animationCache="false"
    android:background="#36D5DA"
    app:cardBackgroundColor="#07E2FF"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:baselineAligned="false"
        android:padding="5dp"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/labelImagen"
                android:layout_width="74dp"
                android:layout_height="92dp"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:fontFamily="@font/roboto_bold"
                android:singleLine="false"
                android:text="@string/juegos"
                android:textAlignment="center"
                android:textSize="18sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/labelDesarrollador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:fontFamily="@font/roboto"
                android:text="@string/desarrollador"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="333dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelAnyo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:fontFamily="@font/roboto_bold"
                android:padding="5dp"
                android:text="@string/anyo"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>